--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,10 @@
-version: "3.1"
+version: '2'
 services:
-  kvaser:
-    build: ./
-    ports:
-      - "8080:443"
+  go-web-app:
+    restart: always
+    build:
+      dockerfile: Dockerfile
+      context: .
+    environment:
+      - VIRTUAL_HOST=kvaser.xyz
+      - LETSENCRYPT_HOST=kvaser.xyz
