--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-requests
-pathlib
-adbutils
-frida
+adbutils==0.7.0
+apkutils2==1.0.0
+certifi==2019.11.28
+chardet==3.0.4
+cigam==0.0.3
+decorator==4.4.1
+deprecation==2.0.7
+frida==12.8.5
+idna==2.8
+packaging==20.0
+pathlib==1.0.1
+py==1.8.1
+pyelftools==0.26
+pyparsing==2.4.6
+requests==2.22.0
+retry==0.9.2
+six==1.13.0
+urllib3==1.25.7
+whichcraft==0.6.1
+xmltodict==0.12.0
